--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
     "files.autoSaveDelay": 1000,
     "window.autoDetectColorScheme": true,
     "extensions.ignoreRecommendations": true,
-    "data.preview.theme": "light"
+    "data.preview.theme": "light",
+    "python.pythonPath": "/home/gitpod/.pyenv/versions/3.8.12/bin/python"
 }
