--- a/project.yaml
+++ b/project.yaml
@@ -1,7 +1,7 @@
 version: '3.0'
 
 expectations:
-  population_size: 1000
+  population_size: 10000000
 
 actions:
 
@@ -11,9 +11,23 @@ actions:
       highly_sensitive:
         cohort: output/input.csv
 
+  cleaned_study_population:
+    run: r:latest analysis/data_cleaning.R
+    needs: [generate_study_population]
+    outputs:
+      highly_sensitive:
+        cohort: output/cleaned_df.csv
+
   describe:
     run: r:latest analysis/report.R
     needs: [generate_study_population]
     outputs:
       moderately_sensitive:
         cohort: output/descriptive.png
+
+  descriptive_figures:
+    run: r:latest analysis/ethnicity_fig.R
+    needs: [generate_study_population]
+    outputs:
+      moderately_sensitive:
+        cohort: output/eth_descriptive.png
