--- a/project.yaml
+++ b/project.yaml
@@ -1,7 +1,7 @@
 version: '3.0'
 
 expectations:
-  population_size: 10000000
+  population_size: 1000
 
 actions:
 
@@ -20,14 +20,14 @@ actions:
 
   describe:
     run: r:latest analysis/report.R
-    needs: [generate_study_population]
+    needs: [cleaned_study_population]
     outputs:
       moderately_sensitive:
         cohort: output/descriptive.png
 
   descriptive_figures:
     run: r:latest analysis/ethnicity_fig.R
-    needs: [generate_study_population]
+    needs: [cleaned_study_population]
     outputs:
       moderately_sensitive:
         cohort: output/eth_descriptive.png
