--- a/project.yaml
+++ b/project.yaml
@@ -1,7 +1,7 @@
 version: '3.0'
 
 expectations:
-  population_size: 10000000
+  population_size: 1000
 
 actions:
 
@@ -16,7 +16,7 @@ actions:
     needs: [generate_study_population]
     outputs:
       highly_sensitive:
-        csv: output/cleaned_df.RDS
+        csv: output/cleaned_df.csv
 
   describe:
     run: r:latest analysis/report.R
