--- a/project.yaml
+++ b/project.yaml
@@ -11,9 +11,21 @@ actions:
       highly_sensitive:
         cohort: output/input.csv
 
-  describe:
+  descriptive_figures:
     run: r:latest analysis/report.R
     needs: [generate_study_population]
     outputs:
       moderately_sensitive:
         cohort: output/descriptive.png
+  
+  descriptive_tables:
+    run: r:latest analysis/full_table_script.R
+    needs: [generate_study_population]
+    outputs:
+      moderately_sensitive:
+        missing_tab: output/Missing.doc
+        table_one: output/Table1.doc
+        table_one_one: output/Table1-1.doc
+        table_one_two: output/Table1-2.doc
+        table_one_three: output/Table1-3.doc
+        table_one_four: output/Table1-4.doc
