--- a/project.yaml
+++ b/project.yaml
@@ -23,9 +23,8 @@ actions:
     needs: [generate_study_population]
     outputs:
       moderately_sensitive:
-        missing_tab: output/Missing.doc
-        table_one: output/Table1.doc
-        table_one_one: output/Table1-1.doc
-        table_one_two: output/Table1-2.doc
-        table_one_three: output/Table1-3.doc
-        table_one_four: output/Table1-4.doc
+        table_one: output/Table1.docx
+        table_one_one: output/Table1-1.docx
+        table_one_two: output/Table1-2.docx
+        table_one_three: output/Table1-3.docx
+        table_one_four: output/Table1-4.docx
