--- a/project.yaml
+++ b/project.yaml
@@ -16,7 +16,7 @@ actions:
     needs: [generate_study_population]
     outputs:
       moderately_sensitive:
-        cohort: output/descriptive.png
+        figure: output/descriptive.png
   
   descriptive_tables:
     run: r:latest analysis/full_table_script.R
@@ -28,3 +28,4 @@ actions:
         table_one_two: output/Table1-2.html
         table_one_three: output/Table1-3.html
         table_one_four: output/Table1-4.html
+        table_one_five: output/Table1-5.html
