--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,31 +1,38 @@
 ---
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - name: Install opensafely cli tool
-# runs when workspace initially created, and as pre-build
+  - name: Install opensafely
+    # prebuild, run in the background on every commit
     init: |
-        pip install opensafely
-        opensafely pull --project project.yaml
-  - name: Update opensafely
-# run every time you open a workspace
-    command:
+        # install everything into a venv in /workspace, so it is persisted in the prebuild image
+        python -m venv /workspace/venv
+        # install opensafely
+        /workspace/venv/bin/pip install --progress-bar off opensafely
+        # ensure essential docker images are preloaded preloaded
+        /workspace/venv/bin/opensafely pull cohortextractor
+    # run everytime we start a workspace
+    command: |
+        # limit action concurrency to as not to exhaust gitpod's RAM
+        export MAX_WORKERS=2
+        # add opensafely to the path
+        export PATH=/workspace/venv/bin:$PATH
         opensafely upgrade
-
+        opensafely pull --project project.yaml
 github:
   prebuilds:
     # enable for the default branch (defaults to true)
     master: true
-# enable for all branches in this repo (defaults to false)
+    # enable for all branches in this repo (defaults to false)
     branches: true
-# enable for pull requests coming from this repo (defaults to true)
+    # enable for pull requests coming from this repo (defaults to true)
     pullRequests: true
-# enable for pull requests coming from forks (defaults to false)
+    # enable for pull requests coming from forks (defaults to false)
     pullRequestsFromForks: true
-# add a check to pull requests (defaults to true)
+    # add a check to pull requests (defaults to true)
     addCheck: true
-# add a "Review in Gitpod" button as a comment to pull requests (defaults to false)
+    # add a "Review in Gitpod" button as a comment to pull requests (defaults to false)
     addComment: true
-# add a "Review in Gitpod" button to the pull request's description (defaults to false)
+    # add a "Review in Gitpod" button to the pull request's description (defaults to false)
     addBadge: false
 
 vscode:
@@ -35,4 +42,3 @@ vscode:
     - redhat.vscode-yaml
     - ikuyadeu.r
     - randomfractalsinc.vscode-data-preview
-    - ms-toolsai.jupyter
